Implemented user role functionality and created the seller dashboard. Path handling functionality remains pending.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "/Users/octavioserrago/Downloads/javafx-sdk-18/lib/javafx.graphics.jar",
         "/Users/octavioserrago/Downloads/javafx-sdk-18/lib/javafx.media.jar",
         "/Users/octavioserrago/Downloads/javafx-sdk-18/lib/javafx.swing.jar",
-        "/Users/octavioserrago/Downloads/javafx-sdk-18/lib/javafx.web.jar"
+        "/Users/octavioserrago/Downloads/javafx-sdk-18/lib/javafx.web.jar",
+        "/Users/octavioserrago/Downloads/mysql-connector-java-5.1.7-bin.jar.jar"
     ]
 }
