Git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ target/
 # Visual Studio Code-specific files
 .vscode/
 
+.src/main/java/com/verona/model/DatabaseConnection.java
+
 # Logs
 logs/
 *.log
